--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,17 @@
 /* Add CSS Styling */
+.odd {
+    background-color: #ffb6c1;
+    font-family: 'Verdana', 'DejaVu Sans', sans-serif;
+}
+#one {
+    color: #0000ff;
+    font-size: 32px;
+}
+.odd.cooler {
+    font-size: 24px;
+}
+#another {
+    font-size: 24px;
+    background-color: lightgreen;
+    font-weight: bold;
+}
